# notelegram

./: .env  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  notelegram.session  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: sign.rs
src-tauri/src/helpers/: telegram.rs
src/component/ProjectSegment/: Project.module.sass
src/component/ProjectSegment/Project1/: Project1.module.sass  Project1.tsx
src/component/ProjectSegment/Project2/: Project2.tsx
src/component/ProjectSegment/Project3/: Project3.tsx
src/component/SlideContainer/: SlideContainer.module.sass  SlideContainer.tsx
src/component/SlideSegment/: SlideSegment.module.sass  SlideSegment.tsx
src/interface/: ISlider.tsx
src/page/RootPage/: RootPage.tsx
src/sass/: index.sass
