[package]
name = "notelegram"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }

# --- JSON ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- LOG ---
log = "0.4.20"
pretty_env_logger = "0.5.0"

# --- TOKIO ---
tokio = { version = "1.32.0", features = ["full"] }

# --- TELEGRAM ---
grammers-session = { git = "https://github.com/Lonami/grammers" }
grammers-client = { git = "https://github.com/Lonami/grammers" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers" }

# --- ENV ---
dotenv = "0.15.0"
lazy_static = "1.4.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
